Added create candidate api
